--- a/trabalhoDPW11set/index.html
+++ b/trabalhoDPW11set/index.html
@@ -25,17 +25,17 @@
         <nav class = "menu">
 
             <ul>
-                <li><a href"#">Home</a></li>
-                 <li><a href"#">Cultura</a>
+                <li><a href = "index.html">Home</a></li>
+                 <li><a href= "cultura.html">Cultura</a>
                      <ul>
-                        <li><a href"#">Filmes</a></li>
-                        <li><a href"#">Livros</a></li>
-                        <li><a href"#">Música</a></li>
+                        <li><a href="#">Filmes</a></li>
+                        <li><a href="#">Livros</a></li>
+                        <li><a href="#">Música</a></li>
                     </ul>
                 </li>
-                <li><a href"#">Pesquisa</a></li>
-                <li><a href"#">Equipamentos</a></li>
-                <li><a href"#">Enquete</a></li>
+                <li><a href="pesquisa.html">Pesquisa</a></li>
+                <li><a href="equipamentos.html">Equipamentos</a></li>
+                <li><a href="enquete.html">Enquete</a></li>
 
 
             </ul>
