Ajustando os errors do validator
o validator reclamou que a tag <a> não poderia ser elemento filho de uma lista <ul>, apenas ajustando o código de acordo com os slides da professora, com o <a> estando dentro de <li> quando antes era o contrário.

--- a/trabalhoDPW11set/index.html
+++ b/trabalhoDPW11set/index.html
@@ -60,10 +60,10 @@
                 <div class="secao-rp link">
                     <h2 class = "h2A_R">Acesso Rápido</h2><br>
                         <ul> 
-                            <a  href="cultura.html"><li>Cultura</li> </a>
-                            <a  href="pesquisa.html"><li>Pesquisa </li></a>
-                            <a  href="equipamentos.html"><li>Equipamentos</li></a>
-                            <a  href="enquete.html"><li>Enquete </li></a>
+                            <li><a  href="cultura.html">Cultura</a></li>
+                            <li><a  href="pesquisa.html">Pesquisa</a></li> 
+                            <li><a  href="equipamentos.html">Equipamentos</a></li>
+                            <li><a  href="enquete.html">Enquete</a></li>
                         </ul>       
                 </div>
                 
