--- a/trabalhoDPW11set/enquete.html
+++ b/trabalhoDPW11set/enquete.html
@@ -26,14 +26,14 @@
 
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                 <li><a href= "cultura.html">Cultura</a>
+                 <li><a href= "cultura.html" target="_blank">Cultura</a>
                      <ul>
                         <li><a href="#">Filmes</a></li>
                         <li><a href="#">Livros</a></li>
                         <li><a href="#">Música</a></li>
                     </ul>
                 </li>
-                <li><a href="pesquisa.html">Pesquisa</a></li>
+                <li><a href="pesquisa.html" target="_blank">Pesquisa</a></li>
                 <li><a href="equipamentos.html">Equipamentos</a></li>
                 <li><a href="enquete.html">Enquete</a></li>
             </ul>
@@ -73,8 +73,8 @@
                 <div class="secao-rp link">
                     <h2 class = "h2A_R">Acesso Rápido</h2><br>
                         <ul> 
-                            <li><a id="acessorap" href="cultura.html">Cultura</a></li>
-                            <li><a id="acessorap"  href="pesquisa.html">Pesquisa</a></li> 
+                            <li><a id="acessorap" target="_blank" href="cultura.html">Cultura</a></li>
+                            <li><a id="acessorap" target="_blank"  href="pesquisa.html">Pesquisa</a></li> 
                             <li><a id="acessorap"  href="equipamentos.html">Equipamentos</a></li>
                             <li><a id="acessorap"  href="enquete.html">Enquete</a></li>
                         </ul>       
