--- a/trabalhoDPW11set/enquete.html
+++ b/trabalhoDPW11set/enquete.html
@@ -27,9 +27,9 @@
                 <li><a href = "index.html">Home</a></li>
                 <li><a href= "cultura.html" target="_blank">Cultura</a>
                     <ul>
-                        <li><a href="#">Filmes</a></li>
-                        <li><a href="#">Livros</a></li>
-                        <li><a href="#">Música</a></li>
+                        <li><a href="cultura.html#filmes">Filmes</a></li>
+                        <li><a href="cultura.html#livros">Livros</a></li>
+                        <li><a href="cultura.html#musica">Música</a></li>
                     </ul>
                 </li>
                 <li><a href="pesquisa.html" target="_blank">Pesquisa</a></li>
