--- a/trabalhoDPW11set/equipamentos.html
+++ b/trabalhoDPW11set/equipamentos.html
@@ -60,10 +60,10 @@
                 <div class="secao-rp link">
                     <h2 class = "h2A_R">Acesso Rápido</h2><br>
                         <ul> 
-                            <li><a id="acessorap" target="_blank" href="cultura.html">Cultura</a></li>
-                            <li><a id="acessorap" target="_blank"  href="pesquisa.html">Pesquisa</a></li> 
-                            <li><a id="acessorap"  href="equipamentos.html">Equipamentos</a></li>
-                            <li><a id="acessorap"  href="enquete.html">Enquete</a></li>
+                            <li><a class="acessorap" target="_blank" href="cultura.html">Cultura</a></li>
+                            <li><a class="acessorap" target="_blank"  href="pesquisa.html">Pesquisa</a></li> 
+                            <li><a class="acessorap"  href="equipamentos.html">Equipamentos</a></li>
+                            <li><a class="acessorap"  href="enquete.html">Enquete</a></li>
                         </ul>       
                 </div>
                 
