--- a/trabalhoDPW11set/cultura.html
+++ b/trabalhoDPW11set/cultura.html
@@ -45,18 +45,18 @@
             <h2 class="h2geral">Aqui nós vamos exibir um pouco da cultura do basquete através de livros, filmes e música</h2><br>
             <h2 id="filmes" class="h2titulo">Filmes</h2>
             <h3 class="h3geral">Top 5 filmes de basquete</h3>
-            <ol class="listas" reversed>
+            <ul class="listas">
                 <li>He got game: A jogada decisiva</li>
-                    <img src="hegot.jpg" alt="a jogada decisiva" class="imggeral">
+                    <li><img src="hegot.jpg" alt="a jogada decisiva" class="imggeral"></li>
                 <li>Eddie, A treinadora</li>
-                    <img src="eddie.jpg" alt="eddie a treinadora" class="imggeral">
+                    <li><img src="eddie.jpg" alt="eddie a treinadora" class="imggeral"> </li>
                 <li>Homens Brancos não sabem enterrar</li>
-                    <img src="white.jpg" alt="homens brancos nao sabem enterrar" class="imggeral">
+                    <li><img src="white.jpg" alt="homens brancos nao sabem enterrar" class="imggeral"></li>
                 <li>Coach Carter, treino para a vida</li>
-                     <img src="Coach_Carter.jpg" alt="coach carter" class="imggeral">
+                     <li><img src="Coach_Carter.jpg" alt="coach carter" class="imggeral"></li>
                 <li>Space Jam: O jogo do século</li>
-                    <img src="spacejam.jpeg" alt="space jam" class="imggeral">
-            </ol>
+                    <li><img src="spacejam.jpeg" alt="space jam" class="imggeral"></li>
+            </ul>
             
             <h2  id="livros" class="h2titulo">Livros</h2>
             <dl class="listas">
