--- a/trabalhoDPW11set/cultura.html
+++ b/trabalhoDPW11set/cultura.html
@@ -47,15 +47,15 @@
             <h3 class="h3geral">Top 5 filmes de basquete</h3>
             <ul class="listas">
                 <li>He got game: A jogada decisiva</li>
-                    <li><img src="hegot.jpg" alt="a jogada decisiva" class="imggeral"></li>
+                    <li><img src="../trabalhoDPW11set/Imagens/hegot.jpg" alt="a jogada decisiva" class="imggeral"></li>
                 <li>Eddie, A treinadora</li>
-                    <li><img src="eddie.jpg" alt="eddie a treinadora" class="imggeral"> </li>
+                    <li><img src="../trabalhoDPW11set/Imagens/eddie.jpg" alt="eddie a treinadora" class="imggeral"> </li>
                 <li>Homens Brancos não sabem enterrar</li>
-                    <li><img src="white.jpg" alt="homens brancos nao sabem enterrar" class="imggeral"></li>
+                    <li><img src="../trabalhoDPW11set/Imagens/white.jpg" alt="homens brancos nao sabem enterrar" class="imggeral"></li>
                 <li>Coach Carter, treino para a vida</li>
-                     <li><img src="Coach_Carter.jpg" alt="coach carter" class="imggeral"></li>
+                     <li><img src="../trabalhoDPW11set/Imagens/Coach_Carter.jpg" alt="coach carter" class="imggeral"></li>
                 <li>Space Jam: O jogo do século</li>
-                    <li><img src="spacejam.jpeg" alt="space jam" class="imggeral"></li>
+                    <li><img src="../trabalhoDPW11set/Imagens/spacejam.jpeg" alt="space jam" class="imggeral"></li>
             </ul>
             
             <h2  id="livros" class="h2titulo">Livros</h2>
